# HCCR-ResNet

./: HCCR3755_cnn_solver.prototxt  HCCR3755_cnn_train_test.prototxt  HCCR3755_res20_solver.prototxt  HCCR3755_res20_train_test.prototxt  HWDB1.1_character.txt  README.md
convert_HWDB_dir/: CMakeLists.txt  convert_HWDB.cpp
convert_HWDB_dir/caffe/proto/: CMakeLists.txt  caffe.pb.cc  caffe.pb.h
convert_HWDB_dir/caffe/util/: CMakeLists.txt  db.cpp  db.hpp  db_leveldb.cpp  db_leveldb.hpp  db_lmdb.cpp  db_lmdb.hpp
